--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --require ts-node/register src",
-    "build": "tsc"
+    "prebuild": "del-cli dist/*",
+    "build": "tsc",
+    "postbuild": "del-cli dist/**/*.type.js* dist/**/*.impl.d.ts"
   },
   "devDependencies": {
     "@types/node": "14.14.41",
+    "del-cli": "3.0.1",
     "ts-node": "9.1.1",
     "typescript": "4.2.4"
   }
