--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "@types/node": "14.14.41",
     "del-cli": "3.0.1",
     "typescript": "4.2.4"
+  },
+  "peerDependencies": {
+    "typescript": ">=3.8.2"
   }
 }
