Allow package to be used with project references
See https://stackoverflow.com/q/51631786

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 
     // Development
     "strict": true,
+    "composite": true,
     "downlevelIteration": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
