--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "typescript": "4.2.4"
   },
   "peerDependencies": {
-    "express": "^4.0.0",
+    "express": "*",
     "typescript": ">=3.8.2"
   }
 }
