--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=0.11.8"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "del-cli dist/*",
