Fix build with "composite" option
This basically negates 3a5b6f8 because composite builds are always incremental

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,11 @@
     "declaration": true,
     "inlineSources": true,
     "sourceMap": true,
+    "composite": true,
+    "rootDir": "src", // needed if "composite" is true
 
     // Development
     "strict": true,
-    "composite": true,
     "downlevelIteration": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
