--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "postbuild": "del-cli dist/**/*.type.js* dist/**/*.impl.d.ts"
+    "postbuild": "del-cli dist/**/*.type.js* dist/**/*.impl.d.ts",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@types/express": "4.17.11"
