--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-allow-methods",
-  "version": "0.1.0",
+  "version": "0.1.1-rc",
   "description": "Express middleware for sending HTTP 405 Method Not Allowed response",
   "author": "Dima Parzhitsky <parzhitsky@gmail.com>",
   "license": "MIT",
