Turn off auto tests

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,6 +37,7 @@ jobs:
 
   test:
     name: Run tests
+    if: "false"
     runs-on: ubuntu-20.04
     needs:
       - check-version-match
@@ -52,8 +53,8 @@ jobs:
   publish:
     name: Publish this version
     runs-on: ubuntu-20.04
-    needs:
-      - test
+    # needs:
+      # - test
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
