--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "@types/express": "4.17.11"
   },
   "devDependencies": {
-    "@types/node": "14.14.41",
+    "@types/node": "14.17.3",
     "del-cli": "3.0.1",
     "typescript": "4.3.2"
   },
   "peerDependencies": {
-    "express": "4 || 5",
+    "express": ">=4",
     "typescript": ">=4.1"
   }
 }
